<resources>
    <string name="app_name">Simple Note</string>
    <string name="my_notes">My Notes</string>
    <string name="sign_in">Sign In</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="notes">Notes</string>
    <string name="note_saved">Note saved</string>
    <string name="note_deleted">Note Deleted</string>
    <string name="note_not_saved">Note not saved</string>
    <string name="all_note_deleted">All Notes Deleted</string>
    <string name="add">add</string>
    <string name="syncing">Syncing</string>
    <string name="syncing_failed">Syncing failed, No internet connection!</string>
    <string name="edit">edit</string>
    <string name="required_fields">Title and Description is required</string>
    <string name="date_format">yyyy/MM/dd  HH:mm</string>
    <string name="back_button">Back Button</string>
    <string name="save">Save</string>
    <string name="delete_all_button">Delete All Button</string>
    <string name="add_note_button">Add Note Button</string>
    <string name="sync_notes">Sync Notes</string>
    <string name="loading">Loading</string>
    <string name="new_data_aded">New data loaded</string>
    <string name="no_results_found">No result found</string>
    <string name="end_of_results">End of result</string>
    <string name="no_online_data">No online data</string>
</resources>
