<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.addEdit.AddEditNoteFragment">

    <include
        android:id="@+id/app_bar_main"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/app_bar_main"
        android:src="@drawable/img_arrow_back_white"/>

    <EditText
        android:id="@+id/addNoteTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textSize="16sp"
        android:inputType="text"
        android:background="@drawable/back_border_dark_gray"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_main"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        />

    <EditText
        android:id="@+id/addNoteDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:background="@drawable/back_border_dark_gray"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/addNoteTitle"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        />

    <ImageView
        android:id="@+id/saveNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/save"
        android:contentDescription="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/addNoteDescription"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        />

</androidx.constraintlayout.widget.ConstraintLayout>